# sprite-editor

./: .gitmodules  CMakeLists.txt  main.cpp
include/: App.h  Canvas.h  Color.h  EventManager.h  Pallete.h  Renderer.h  Text.h  Vector2.h
